--- a/teams.html
+++ b/teams.html
@@ -4,63 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasy Football Teams</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #1a5f7a;
-            color: white;
-            padding: 1rem;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-        main {
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .section-title {
-            text-align: center;
-        }
-        .team-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .team-list-header {
-            background-color: #1a5f7a;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .team-list-item {
-            background-color: white;
-            margin-bottom: 10px;
-            padding: 10px 20px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-        }
-        .team-details p {
-            margin: 5px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
