--- a/pages/teams.html
+++ b/pages/teams.html
@@ -11,7 +11,7 @@
         <h1>Fantasy Football League</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="teams.html">Teams</a></li>
                 <li><a href="players.html">Players</a></li>
                 <li><a href="league-history.html">League History</a></li>
