--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fantasy Football Teams</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Blind Brook Fantasy Football League History</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Fantasy Football League</h1>
+        <h1>Blind Brook Fantasy Football League</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -20,10 +20,39 @@
     </header>
     <main>
         <h2 class="section-title">League History</h2>
-        <ul id="teamList" class="team-list">
-            <!-- List items will be populated here -->
-        </ul>
+        <div class="tabs">
+            <button class="tab-button" onclick="showPanel('standings')">Standings</button>
+            <button class="tab-button" onclick="showPanel('playoffs')">Playoffs</button>
+            <button class="tab-button" onclick="showPanel('schedule')">Schedule</button>
+            <button class="tab-button" onclick="showPanel('drafts')">Drafts</button>
+            <button class="tab-button" onclick="showPanel('league-winners')">League Winners</button>
+            <button class="tab-button" onclick="showPanel('last-place')">Last Place Finishers</button>
+        </div>
+        <div id="standings" class="tab-content">
+            <h3>Standings</h3>
+            <!-- Standings content here -->
+        </div>
+        <div id="playoffs" class="tab-content" style="display:none;">
+            <h3>Playoffs</h3>
+            <!-- Playoffs content here -->
+        </div>
+        <div id="schedule" class="tab-content" style="display:none;">
+            <h3>Schedule</h3>
+            <!-- Schedule content here -->
+        </div>
+        <div id="drafts" class="tab-content" style="display:none;">
+            <h3>Drafts</h3>
+            <!-- Drafts content here -->
+        </div>
+        <div id="league-winners" class="tab-content" style="display:none;">
+            <h3>League Winners</h3>
+            <!-- League Winners content here -->
+        </div>
+        <div id="last-place" class="tab-content" style="display:none;">
+            <h3>Last Place Finishers</h3>
+            <!-- Last Place Finishers content here -->
+        </div>
     </main>
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
