added league history panel

--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -20,39 +20,44 @@
     </header>
     <main>
         <h2 class="section-title">League History</h2>
-        <div class="tabs">
-            <button class="tab-button" onclick="showPanel('standings')">Standings</button>
-            <button class="tab-button" onclick="showPanel('playoffs')">Playoffs</button>
-            <button class="tab-button" onclick="showPanel('schedule')">Schedule</button>
-            <button class="tab-button" onclick="showPanel('drafts')">Drafts</button>
-            <button class="tab-button" onclick="showPanel('league-winners')">League Winners</button>
-            <button class="tab-button" onclick="showPanel('last-place')">Last Place Finishers</button>
-        </div>
-        <div id="standings" class="tab-content">
-            <h3>Standings</h3>
-            <!-- Standings content here -->
-        </div>
-        <div id="playoffs" class="tab-content" style="display:none;">
-            <h3>Playoffs</h3>
-            <!-- Playoffs content here -->
-        </div>
-        <div id="schedule" class="tab-content" style="display:none;">
-            <h3>Schedule</h3>
-            <!-- Schedule content here -->
-        </div>
-        <div id="drafts" class="tab-content" style="display:none;">
-            <h3>Drafts</h3>
-            <!-- Drafts content here -->
-        </div>
-        <div id="league-winners" class="tab-content" style="display:none;">
-            <h3>League Winners</h3>
-            <!-- League Winners content here -->
-        </div>
-        <div id="last-place" class="tab-content" style="display:none;">
-            <h3>Last Place Finishers</h3>
-            <!-- Last Place Finishers content here -->
+        <div class="gallery">
+            <div class="gallery-item">
+                <a href="standings.html">
+                    <img src="placeholder1.jpg" alt="Standings">
+                    <div class="caption">Standings</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="playoffs.html">
+                    <img src="placeholder2.jpg" alt="Playoffs">
+                    <div class="caption">Playoffs</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="schedule.html">
+                    <img src="placeholder3.jpg" alt="Schedule">
+                    <div class="caption">Schedule</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="drafts.html">
+                    <img src="placeholder4.jpg" alt="Drafts">
+                    <div class="caption">Drafts</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="league-winners.html">
+                    <img src="placeholder5.jpg" alt="League Winners">
+                    <div class="caption">League Winners</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="last-place.html">
+                    <img src="placeholder6.jpg" alt="Last Place Finishers">
+                    <div class="caption">Last Place Finishers</div>
+                </a>
+            </div>
         </div>
     </main>
-    <script src="script.js"></script>
 </body>
 </html>
