--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/teams.html">Teams</a></li>
                 <li><a href="players.html">Players</a></li>
-                <li><a href="league-history.html">League History</a></li>
+                <li><a href="pages/league-history.html">League History</a></li>
             </ul>
         </nav>
     </header>
