--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="playoffs.html">
+                <a href="league-history/playoffs/2023-playoffs.html">
                     <img src="../Images/Icons/Playoffs.jpg" alt="Playoffs">
                     <div class="caption">Playoffs</div>
                 </a>
