--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blind Brook Fantasy Football League History</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
         <h1>Blind Brook Fantasy Football League</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="teams.html">Teams</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/teams.html">Teams</a></li>
                 <li><a href="players.html">Players</a></li>
-                <li><a href="league-history.html">League History</a></li>
+                <li><a href="/pages/league-history.html">League History</a></li>
             </ul>
         </nav>
     </header>
