--- a/pages/league-history/playoffs/2023-playoffs.html
+++ b/pages/league-history/playoffs/2023-playoffs.html
@@ -2,93 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playoff Bracket</title>
-    <link rel="stylesheet" href="../../../styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <header class="hero">
-        <div class="hero-wrap">
-            <p class="intro" id="intro">Playoff</p>
-            <h1 id="headline">Bracket</h1>
-            <p class="year"><i class="fa fa-star"></i> 2024 <i class="fa fa-star"></i></p>
-        </div>
-    </header>
-
-    <section id="bracket">
-        <div class="container">
-            <div class="split split-one">
-                <div class="round round-one current">
-                    <div class="round-details">Round 1<br/><span class="date">Dates TBD</span></div>
-                    <ul class="matchup">
-                        <li class="team team-top" id="seed3">Seed 3 <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom" id="seed6">Seed 6 <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top" id="seed4">Seed 4 <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom" id="seed5">Seed 5 <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul>
-                </div>  <!-- END ROUND ONE -->
-
-                <div class="round round-two">
-                    <div class="round-details">Round 2<br/><span class="date">Dates TBD</span></div>     
-                    <ul class="matchup">
-                        <li class="team team-top bye" id="seed1">Seed 1 (Bye)</li>
-                        <li class="team team-bottom" id="winner3v6">Winner of 3 vs 6 <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul> 
-                    <ul class="matchup">
-                        <li class="team team-top bye" id="seed2">Seed 2 (Bye)</li>
-                        <li class="team team-bottom" id="winner4v5">Winner of 4 vs 5 <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul>                   
-                </div>  <!-- END ROUND TWO -->
-            </div> 
-
-            <div class="champion">
-                <div class="final">
-                    <i class="fa fa-trophy"></i>
-                    <div class="round-details">Championship<br/><span class="date">Dates TBD</span></div>    
-                    <ul class="matchup championship">
-                        <li class="team team-top" id="winnerRound2A">Winner of Round 2A <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom" id="winnerRound2B">Winner of Round 2B <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul>
-                </div>
+    <div class="bracket">
+        <div class="round round-1">
+            <div class="matchup">
+                <span class="team">Team A <span class="score">10</span></span>
+                <span class="team">Team D <span class="score">8</span></span>
             </div>
-
-            <div class="split split-two">
-                <div class="round round-two">
-                    <div class="round-details">Round 2<br/><span class="date">Dates TBD</span></div>           
-                    <ul class="matchup">
-                        <li class="team team-top" id="winner3v6">Winner of 3 vs 6 <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom bye" id="seed1">Seed 1 (Bye)</li>
-                    </ul> 
-                    <ul class="matchup">
-                        <li class="team team-top" id="winner4v5">Winner of 4 vs 5 <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom bye" id="seed2">Seed 2 (Bye)</li>
-                    </ul>                   
-                </div>  <!-- END ROUND TWO -->
-
-                <div class="round round-one current">
-                    <div class="round-details">Round 1<br/><span class="date">Dates TBD</span></div>
-                    <ul class="matchup">
-                        <li class="team team-top" id="seed4">Seed 4 <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom" id="seed5">Seed 5 <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul>
-                    <ul class="matchup">
-                        <li class="team team-top" id="seed3">Seed 3 <span class="score"><input type="text" placeholder="Score"></span></li>
-                        <li class="team team-bottom" id="seed6">Seed 6 <span class="score"><input type="text" placeholder="Score"></span></li>
-                    </ul>                   
-                </div>  <!-- END ROUND ONE -->                  
+            <div class="matchup">
+                <span class="team">Team B <span class="score">15</span></span>
+                <span class="team">Team C <span class="score">12</span></span>
+            </div>
+            <div class="matchup">
+                <span class="team">Team E <span class="score">20</span></span>
+                <span class="team">Team F <span class="score">18</span></span>
             </div>
         </div>
-    </section>
-
-    <section class="share">
-        <div class="share-wrap">
-            <a class="share-icon" href="#"><i class="fa fa-twitter"></i></a>
-            <a class="share-icon" href="#"><i class="fa fa-facebook"></i></a>
-            <a class="share-icon" href="#"><i class="fa fa-envelope"></i></a>
+        <div class="round round-2">
+            <div class="matchup">
+                <span class="team">Winner 1 <span class="score">---</span></span>
+                <span class="team">Winner 2 <span class="score">---</span></span>
+            </div>
+            <div class="matchup">
+                <span class="team">Winner 3 <span class="score">---</span></span>
+                <span class="team">Winner 4 <span class="score">---</span></span>
+            </div>
         </div>
-    </section>
+        <div class="round round-3">
+            <div class="matchup">
+                <span class="team">Final Winner <span class="score">---</span></span>
+                <span class="team">Runner Up <span class="score">---</span></span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
