--- a/pages/teams.html
+++ b/pages/teams.html
@@ -11,10 +11,10 @@
         <h1>Fantasy Football League</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="teams.html">Teams</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/teams.html">Teams</a></li>
                 <li><a href="players.html">Players</a></li>
-                <li><a href="league-history.html">League History</a></li>
+                <li><a href="/pages/league-history.html">League History</a></li>
             </ul>
         </nav>
     </header>
