--- a/pages/league-history/playoffs/2023-playoffs.html
+++ b/pages/league-history/playoffs/2023-playoffs.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <header>
+        <h1>Blind Brook Fantasy Football League</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/teams.html">Teams</a></li>
+                <li><a href="players.html">Players</a></li>
+                <li><a href="/pages/league-history.html">League History</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="bracket">
         <div class="round round-1">
             <div class="matchup">
