--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/pages/teams.html">Teams</a></li>
+                <li><a href="/BBHS/pages/teams.html">Teams</a></li>
                 <li><a href="players.html">Players</a></li>
                 <li><a href="/pages/league-history.html">League History</a></li>
             </ul>
