--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blind Brook Fantasy Football League History</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/BBHS/styles.css">
 </head>
 <body>
     <header>
