--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/BBHS/pages/teams.html">Teams</a></li>
-                <li><a href="players.html">Players</a></li>
-                <li><a href="/pages/league-history.html">League History</a></li>
+                <li><a href="/BBFF/pages/teams.html">Teams</a></li>
+                <li><a href="/BBFF/pages/players.html">Players</a></li>
+                <li><a href="/BBFF/pages/league-history.html">League History</a></li>
             </ul>
         </nav>
     </header>
