--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Blind Brook Fantasy Football League</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="/BBFF/index.html">Home</a></li>
                 <li><a href="/BBFF/pages/teams.html">Teams</a></li>
                 <li><a href="/BBFF/pages/players.html">Players</a></li>
                 <li><a href="/BBFF/pages/league-history.html">League History</a></li>
