--- a/pages/league-history/playoffs/2023-playoffs.html
+++ b/pages/league-history/playoffs/2023-playoffs.html
@@ -11,10 +11,10 @@
         <h1>Blind Brook Fantasy Football League</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/pages/teams.html">Teams</a></li>
-                <li><a href="players.html">Players</a></li>
-                <li><a href="/pages/league-history.html">League History</a></li>
+                <li><a href="/BBFF/index.html">Home</a></li>
+                <li><a href="/BBFF/pages/teams.html">Teams</a></li>
+                <li><a href="/BBFF/pages/players.html">Players</a></li>
+                <li><a href="/BBFF/pages/league-history.html">League History</a></li>
             </ul>
         </nav>
     </header>
