--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playoff Bracket</title>
+    <title>Blind Brook Fantasy Football League History</title>
     <link rel="stylesheet" href="/BBFF/styles.css">
 </head>
 <body>
@@ -18,37 +18,46 @@
             </ul>
         </nav>
     </header>
-    <div class="bracket">
-        <div class="round round-1">
-            <div class="matchup">
-                <span class="team">Team A <span class="score">10</span></span>
-                <span class="team">Team D <span class="score">8</span></span>
+    <main>
+        <h2 class="section-title">League History</h2>
+        <div class="gallery">
+            <div class="gallery-item">
+                <a href="standings.html">
+                    <img src="../Images/Icons/Standings.jpg" alt="Standings">
+                    <div class="caption">Standings</div>
+                </a>
             </div>
-            <div class="matchup">
-                <span class="team">Team B <span class="score">15</span></span>
-                <span class="team">Team C <span class="score">12</span></span>
+            <div class="gallery-item">
+                <a href="league-history/playoffs/2023-playoffs.html">
+                    <img src="../Images/Icons/Playoffs.jpg" alt="Playoffs">
+                    <div class="caption">Playoffs</div>
+                </a>
             </div>
-            <div class="matchup">
-                <span class="team">Team E <span class="score">20</span></span>
-                <span class="team">Team F <span class="score">18</span></span>
+            <div class="gallery-item">
+                <a href="schedule.html">
+                    <img src="../Images/Icons/Schedule.jpg" alt="Schedule">
+                    <div class="caption">Schedule</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="drafts.html">
+                    <img src="../Images/Icons/Draft.jpg" alt="Drafts">
+                    <div class="caption">Drafts</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="league-winners.html">
+                    <img src="../Images/Icons/Winners.png" alt="League Winners">
+                    <div class="caption">League Winners</div>
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="last-place.html">
+                    <img src="../Images/Icons/Loser.jpg" alt="Last Place Finishers">
+                    <div class="caption">Last Place Finishers</div>
+                </a>
             </div>
         </div>
-        <div class="round round-2">
-            <div class="matchup">
-                <span class="team">Winner 1 <span class="score">---</span></span>
-                <span class="team">Winner 2 <span class="score">---</span></span>
-            </div>
-            <div class="matchup">
-                <span class="team">Winner 3 <span class="score">---</span></span>
-                <span class="team">Winner 4 <span class="score">---</span></span>
-            </div>
-        </div>
-        <div class="round round-3">
-            <div class="matchup">
-                <span class="team">Final Winner <span class="score">---</span></span>
-                <span class="team">Runner Up <span class="score">---</span></span>
-            </div>
-        </div>
-    </div>
+    </main>
 </body>
 </html>
