--- a/pages/league-history/playoffs/2023-playoffs.html
+++ b/pages/league-history/playoffs/2023-playoffs.html
@@ -21,32 +21,78 @@
     <div class="bracket">
         <div class="round round-1">
             <div class="matchup">
-                <span class="team">Team A <span class="score">10</span></span>
-                <span class="team">Team D <span class="score">8</span></span>
+                <div class="team">
+                    <span class="name">Duke</span>
+                    <span class="score">76</span>
+                </div>
+                <div class="team">
+                    <span class="name">Virginia</span>
+                    <span class="score">82</span>
+                </div>
             </div>
             <div class="matchup">
-                <span class="team">Team B <span class="score">15</span></span>
-                <span class="team">Team C <span class="score">12</span></span>
+                <div class="team">
+                    <span class="name">Wake Forest</span>
+                    <span class="score">64</span>
+                </div>
+                <div class="team">
+                    <span class="name">Clemson</span>
+                    <span class="score">56</span>
+                </div>
             </div>
             <div class="matchup">
-                <span class="team">Team E <span class="score">20</span></span>
-                <span class="team">Team F <span class="score">18</span></span>
+                <div class="team">
+                    <span class="name">North Carolina</span>
+                    <span class="score">68</span>
+                </div>
+                <div class="team">
+                    <span class="name">Florida State</span>
+                    <span class="score">54</span>
+                </div>
+            </div>
+            <div class="matchup">
+                <div class="team">
+                    <span class="name">NC State</span>
+                    <span class="score">74</span>
+                </div>
+                <div class="team">
+                    <span class="name">Maryland</span>
+                    <span class="score">92</span>
+                </div>
             </div>
         </div>
         <div class="round round-2">
             <div class="matchup">
-                <span class="team">Winner 1 <span class="score">---</span></span>
-                <span class="team">Winner 2 <span class="score">---</span></span>
+                <div class="team">
+                    <span class="name">Winner 1</span>
+                    <span class="score">---</span>
+                </div>
+                <div class="team">
+                    <span class="name">Winner 2</span>
+                    <span class="score">---</span>
+                </div>
             </div>
             <div class="matchup">
-                <span class="team">Winner 3 <span class="score">---</span></span>
-                <span class="team">Winner 4 <span class="score">---</span></span>
+                <div class="team">
+                    <span class="name">Winner 3</span>
+                    <span class="score">---</span>
+                </div>
+                <div class="team">
+                    <span class="name">Winner 4</span>
+                    <span class="score">---</span>
+                </div>
             </div>
         </div>
         <div class="round round-3">
             <div class="matchup">
-                <span class="team">Final Winner <span class="score">---</span></span>
-                <span class="team">Runner Up <span class="score">---</span></span>
+                <div class="team">
+                    <span class="name">Final Winner</span>
+                    <span class="score">---</span>
+                </div>
+                <div class="team">
+                    <span class="name">Runner Up</span>
+                    <span class="score">---</span>
+                </div>
             </div>
         </div>
     </div>
