--- a/pages/teams.html
+++ b/pages/teams.html
@@ -24,6 +24,6 @@
             <!-- List items will be populated here -->
         </ul>
     </main>
-    <script src="../script.js"></script>
+    <script src="/BBHS/script.js"></script>
 </body>
 </html>
