playoff bracket attempt

--- a/pages/league-history/playoffs/2023-playoffs.html
+++ b/pages/league-history/playoffs/2023-playoffs.html
@@ -18,33 +18,94 @@
             </ul>
         </nav>
     </header>
-    <div class="bracket">
-        <div class="round round-1">
-            <div class="matchup">
-                <div class="team">
-                    <span class="name">Duke</span>
-                    <span class="score">76</span>
+    <main>
+        <div class="bracket">
+            <div class="round round-1">
+                <div class="round-label">
+                    ROUND 1 <span>MARCH 16</span>
                 </div>
-                <div class="team">
-                    <span class="name">Virginia</span>
-                    <span class="score">82</span>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">Duke</span>
+                        <span class="score">76</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Virginia</span>
+                        <span class="score">82</span>
+                    </div>
+                </div>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">Wake Forest</span>
+                        <span class="score">64</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Clemson</span>
+                        <span class="score">56</span>
+                    </div>
+                </div>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">North Carolina</span>
+                        <span class="score">68</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Florida State</span>
+                        <span class="score">54</span>
+                    </div>
+                </div>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">NC State</span>
+                        <span class="score">74</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Maryland</span>
+                        <span class="score">92</span>
+                    </div>
                 </div>
             </div>
-            <div class="matchup">
-                <div class="team">
-                    <span class="name">Wake Forest</span>
-                    <span class="score">64</span>
+            <div class="round round-2">
+                <div class="round-label">
+                    ROUND 2 <span>MARCH 18</span>
                 </div>
-                <div class="team">
-                    <span class="name">Clemson</span>
-                    <span class="score">56</span>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">Winner 1</span>
+                        <span class="score">---</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Winner 2</span>
+                        <span class="score">---</span>
+                    </div>
+                </div>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">Winner 3</span>
+                        <span class="score">---</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Winner 4</span>
+                        <span class="score">---</span>
+                    </div>
                 </div>
             </div>
-            <div class="matchup">
-                <div class="team">
-                    <span class="name">North Carolina</span>
-                    <span class="score">68</span>
+            <div class="round round-3">
+                <div class="round-label">
+                    ROUND 3 <span>MARCH 22</span>
                 </div>
-                <div class="team">
-                    <span class="name">Florida State</span>
-                    <span class="score">54</span>
+                <div class="matchup">
+                    <div class="team">
+                        <span class="name">Final Winner</span>
+                        <span class="score">---</span>
+                    </div>
+                    <div class="team">
+                        <span class="name">Runner Up</span>
+                        <span class="score">---</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
