--- a/pages/league-history/playoffs/2023-playoffs.html
+++ b/pages/league-history/playoffs/2023-playoffs.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="bracket">
-            <div class="round">
+            <div class="round round-1">
                 <div class="round-label">
                     ROUND 1 <span>MARCH 16</span>
                 </div>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="round">
+            <div class="round round-2">
                 <div class="round-label">
                     ROUND 2 <span>MARCH 18</span>
                 </div>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="round">
+            <div class="round round-3">
                 <div class="round-label">
                     ROUND 3 <span>MARCH 22</span>
                 </div>
