--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -23,37 +23,37 @@
         <div class="gallery">
             <div class="gallery-item">
                 <a href="standings.html">
-                    <img src="../Images/Icons/Standings.jpg" alt="Standings">
+                    <img src="/BBFF/Images/Icons/Standings.jpg" alt="Standings">
                     <div class="caption">Standings</div>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="league-history/playoffs/2023-playoffs.html">
-                    <img src="../Images/Icons/Playoffs.jpg" alt="Playoffs">
+                    <img src="/BBFF/Images/Icons/Playoffs.jpg" alt="Playoffs">
                     <div class="caption">Playoffs</div>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="schedule.html">
-                    <img src="../Images/Icons/Schedule.jpg" alt="Schedule">
+                    <img src="/BBFF/Images/Icons/Schedule.jpg" alt="Schedule">
                     <div class="caption">Schedule</div>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="drafts.html">
-                    <img src="../Images/Icons/Draft.jpg" alt="Drafts">
+                    <img src="/BBFF/Images/Icons/Draft.jpg" alt="Drafts">
                     <div class="caption">Drafts</div>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="league-winners.html">
-                    <img src="../Images/Icons/Winners.png" alt="League Winners">
+                    <img src="/BBFF/Images/Icons/Winners.png" alt="League Winners">
                     <div class="caption">League Winners</div>
                 </a>
             </div>
             <div class="gallery-item">
                 <a href="last-place.html">
-                    <img src="../Images/Icons/Loser.jpg" alt="Last Place Finishers">
+                    <img src="/BBFF/Images/Icons/Loser.jpg" alt="Last Place Finishers">
                     <div class="caption">Last Place Finishers</div>
                 </a>
             </div>
