added link to page

--- a/pages/league-history.html
+++ b/pages/league-history.html
@@ -22,7 +22,7 @@
         <h2 class="section-title">League History</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <a href="standings.html">
+                <a href="/BBFF/pages/league-history/standings/2023-standings.html">
                     <img src="/BBFF/Images/Icons/Standings.jpg" alt="Standings">
                     <div class="caption">Standings</div>
                 </a>
