--- a/pages/league-history/Standings/2023-Standings.html
+++ b/pages/league-history/Standings/2023-Standings.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasy Football Teams</title>
-    <link rel="stylesheet" href="../../../styles.css">
+    <link rel="stylesheet" href="/BBFF/styles.css">
 </head>
 <body>
     <header>
         <h1>Fantasy Football League</h1>
         <nav>
             <ul>
-                <li><a href="../../../index.html">Home</a></li>
-                <li><a href="../../teams.html">Teams</a></li>
-                <li><a href="../../players.html">Players</a></li>
-                <li><a href="../../league-history.html">League History</a></li>
+                <li><a href="/BBFF/index.html">Home</a></li>
+                <li><a href="/BBFF/pages/teams.html">Teams</a></li>
+                <li><a href="/BBFF/pages/players.html">Players</a></li>
+                <li><a href="/BBFF/pages/league-history.html">League History</a></li>
             </ul>
         </nav>
     </header>
@@ -24,6 +24,6 @@
             <!-- List items will be populated here -->
         </ul>
     </main>
-    <script src="../../../script.js"></script>
+    <script src="/BBFF/script.js"></script>
 </body>
 </html>
